force-app/main/default/objects/synety__CloudCall_Contact_Phone_Map__c/synety__CloudCall_Contact_Phone_Map__c.object-meta.xml
<CustomObject>
    <label>CloudCall Contact Phone Map</label>
    <nameField>
        <label>CloudCall Contact Phone Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall Contact Phones Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>