force-app/main/default/objects/synety__CloudCall_Contact_Phone_Map__c/fields/synety__Priority__c.field-meta.xml
<CustomField>
    <fullName>synety__Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>