force-app/main/default/objects/synety__CloudCall_Contact_Phone_Map__c/fields/synety__Salesforce_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>synety__Salesforce_Phone_Field__c</fullName>
    <label>Salesforce Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>